--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -9,7 +9,7 @@
   text-align: center;
   font-weight: 500;
   letter-spacing: 2px;
-  color:#283739;
+  color: #283739;
 }
 .editor_nav {
   width: 90%;
@@ -22,30 +22,52 @@
 .editor_nav ul li {
   display: inline-block;
   padding: 15px 20px 15px 20px;
-}
-.editor_nav ul li:hover{
-    background-color: #222831;
-    transition: .5s all linear;
-}
-.editor_nav ul li a {
   text-decoration: none;
   font-size: 18px;
   letter-spacing: 1px;
-  color:#F7F7F7;
+  color: #f7f7f7;
+}
+.editor_nav ul li:hover {
+  background-color: #222831;
+  transition: 0.5s all linear;
+}
+li.active{
+  background-color: #222831;
+  height: 50px;
+}
+.editor_nav ul a {
+  text-decoration: none;
   
 }
-.preview{
-  width:88%;
-  margin:auto;
-  height:500px;
-  border:1px solid grey;
-  overflow: scroll;
-  
-  font-size: 13px;
-  padding:13px;
-  font-family:  Helvetica Neue;
-        color:#333;
+.preview {
+  width: 88%;
+  margin: auto;
+  height: auto;
+  border: 1px solid grey;
+  margin-bottom: 25px;
+}
+
+.sun-editor-editable {
+  padding: 15px;
 }
 .sun-editor-editable p {
   line-height: 0.5;
+  
 }
+pre p{
+  display:flex;
+  flex-direction: column;
+}
+/* .se-image-container img {
+  width: 100%;
+}
+.__se__float-left figure {
+  float: left;
+}
+.__se__float-right figure {
+  float: right;
+}
+.__se__float-center figure {
+  display: block;
+  margin: auto;
+} */
