--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -45,7 +45,7 @@
 .preview {
   width: 90%;
   margin: auto;
-  height: 100vh;
+  height: auto;
   border: 1px solid #dadada;
   margin-bottom: 25px;
 }
