--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -56,7 +56,7 @@ body {
   width: 90%;
   margin: auto;
   height: 100%;
-
+ 
  
 }
 .preview img {
@@ -65,6 +65,7 @@ body {
 .sun-editor-editable {
   border: 1px solid #dadada;
   height:100%;
+  border-radius: 0px 0px 4px 4px;
 }
 .sun-editor-editable img {
   overflow: scroll;
@@ -76,6 +77,9 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
+.sun-editor .se-wrapper .se-wrapper-inner{
+ min-height: 430px;
+}
 .ͼ1 {
   height: 100%;
 }
