--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,8 +3,7 @@
   padding: 0;
 }
 html,
-body,
-#root {
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -56,15 +55,13 @@ body {
   width: 90%;
   margin: auto;
   height: 100%;
- 
- 
 }
 .preview img {
   overflow: scroll;
 }
 .sun-editor-editable {
   border: 1px solid #dadada;
-  height:100%;
+  height: 100%;
   border-radius: 0px 0px 4px 4px;
 }
 .sun-editor-editable img {
@@ -77,9 +74,6 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-.sun-editor .se-wrapper .se-wrapper-inner{
- min-height: 430px;
-}
 .ͼ1 {
   height: 100%;
 }
