--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,12 +2,7 @@
   margin: 0;
   padding: 0;
 }
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+
 body {
   background-color: #f8f8f8fa;
 }
@@ -74,6 +69,20 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
+.sun-editor .se-wrapper .se-wrapper-inner {
+  min-height: 420px;
+}
+
 .ͼ1 {
   height: 100%;
+}
+
+@media screen and (max-width: 346px) {
+  .editor_nav ul li {
+    margin: 0px 15px;
+  }
+
+  .editor_nav a {
+    font-size: 12px;
+  }
 }
