some changes are made

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -172,6 +172,10 @@ body {
 .ͼ1 .cm-scroller {
   padding: 13px;
 }
+.sun-editor .se-toolbar  {
+  position: sticky ;
+  top: 0;
+}
 
 @media screen and (max-width: 346px) {
   .editor_nav ul li {
