--- a/src/editor/editor.override.css
+++ b/src/editor/editor.override.css
@@ -1,7 +1,7 @@
 /* Editor toolbar  */
 .sun-editor .se-toolbar {
   outline: none !important;
-  border: 1px solid #b1b1b1;
+  border: 1px solid #d4d4d4;
   position: sticky;
   top: 0;
   height: 10%;
@@ -16,6 +16,7 @@
   flex: 1;
 
   color: black;
+  overflow: auto;
 }
 /* Editor container image */
 .sun-editor-editable img {
@@ -51,8 +52,8 @@
   overflow: auto;
   height: 90%;
   overflow-x: hidden;
-  border-left: 1px solid #b1b1b1;
-  border-right: 1px solid #b1b1b1;
+  border-left: 1px solid #d4d4d4;
+  border-right: 1px solid #d4d4d4;
   overflow-y: auto;
 }
 
@@ -66,7 +67,7 @@
   z-index: 10;
   width: 100%;
   margin: auto;
-  border: 1px solid #b1b1b1;
+  border: 1px solid #d4d4d4;
   border-radius: 0px 0px 4px 4px;
 }
 @media screen and (max-width: 1078px) {
