model style fix

--- a/src/editor/editor.override.css
+++ b/src/editor/editor.override.css
@@ -70,6 +70,13 @@
   border: 1px solid #d4d4d4;
   border-radius: 0px 0px 4px 4px;
 }
+
+.sun-editor .se-list-layer {
+  border: 1px solid #bababa00;
+  box-shadow: 0 3px 9px rgb(0 0 0 / 10%);
+  margin-top: 5px;
+}
+
 @media screen and (max-width: 1078px) {
   .sun-editor .se-toolbar {
     height: 19%;
