--- a/src/components/overwriteEditor.css
+++ b/src/components/overwriteEditor.css
@@ -45,6 +45,7 @@
   border-left: 1px solid #b1b1b1;
   border-right: 1px solid #b1b1b1;
   overflow-x: hidden !important;
+  overflow-y:scroll ;
 }
 
 .sun-editor-editable p {
