--- a/src/editor/editor.override.css
+++ b/src/editor/editor.override.css
@@ -7,7 +7,11 @@
 height: 10%;
   border-radius: 4px 4px 0px 0px;
 }
-
+.sun-editor .se-list-layer.se-list-font-family{
+  height:300px;
+  overflow: auto;
+  
+}
 /* Editor  container */
 .sun-editor-editable {
   font-family: "Poppins", sans-serif;
