--- a/src/home/global.css
+++ b/src/home/global.css
@@ -127,20 +127,20 @@ body {
 }
 .parent_container {
   height: 470px;
+  
+}
+
+.color_picker {
   position: relative;
-}
-.color_button{
-  background-color: #283739;
-  color:rgb(230, 226, 226);
-  padding: 5px;
-  margin-left: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  border: none;
-}
-.color_button:hover{
-  background-color: #3c4446;
-  transition: 0.3s all linear;
+  bottom:95%;
+  left:40%;
+  width:0px;
+  z-index: 2000;
+  background: white;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+ visibility: hidden;
 }
 .preview {
   width: 90%;
