--- a/src/editor/editor.override.css
+++ b/src/editor/editor.override.css
@@ -8,6 +8,7 @@
   border: 1px solid #d4d4d4;
   position: sticky;
   top: 0;
+
   height: 10%;
   border-radius: 4px 4px 0px 0px;
 }
@@ -69,10 +70,11 @@
   overflow: hidden !important;
 }
 .sun-editor .se-resizing-bar {
-  position: fixed;
+  position: absolute;
   top: 100%;
-
-  width: 100%;
+  right: 0;
+  left: 0;
+  
   margin: auto;
   border: 1px solid #d4d4d4;
   border-radius: 0px 0px 4px 4px;
@@ -84,19 +86,6 @@
   border: 1px solid #bababa00;
   box-shadow: 0 3px 9px rgb(0 0 0 / 10%);
   margin-top: 5px;
-}
-
-.color_picker {
-  position: relative;
-  bottom: 95%;
-  left: 40%;
-  width: 0px;
-  z-index: 2000;
-  background: white;
-  padding: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  border-radius: 8px;
-  visibility: hidden;
 }
 
 @media screen and (max-width: 1078px) {
