--- a/src/home/global.css
+++ b/src/home/global.css
@@ -61,6 +61,8 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  /* overflow-x: hidden; */
 }
 
 body {
@@ -127,21 +129,8 @@ body {
 }
 .parent_container {
   height: 470px;
-  
 }
 
-.color_picker {
-  position: relative;
-  bottom:95%;
-  left:40%;
-  width:0px;
-  z-index: 2000;
-  background: white;
-  padding: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  border-radius: 8px;
- visibility: hidden;
-}
 .preview {
   width: 90%;
   margin: auto;
@@ -157,10 +146,51 @@ body {
   overflow: auto;
   overflow-x: hidden;
 }
+.color_picker {
+  position: relative;
+  bottom: 95%;
+  left: 40%;
+  right:0;
+  width: 0px;
+  z-index: 2000;
+  background: white;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+  visibility: hidden;
+}
 
 @media screen and (max-width: 346px) {
   .nav {
     padding: 0px 10px;
     font-size: 13px;
+  }
+}
+@media screen and (max-width: 538px) {
+  .color_picker {
+    left: 30%;
+  }
+}
+@media screen and (max-width: 501px) {
+  .color_picker {
+    left: 25%;
+  }
+}
+@media screen and (max-width: 428px) {
+  .color_picker {
+    bottom: 88%;
+    left: 15%;
+  }
+}
+@media screen and (max-width: 375px) {
+  .color_picker {
+    left: 5%;
+  }
+}
+@media screen and (max-width: 333px) {
+  .color_picker {
+  
+    left:0%;
+    
   }
 }
