--- a/src/editor/ui-preview/preview.module.css
+++ b/src/editor/ui-preview/preview.module.css
@@ -5,10 +5,81 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  border: 1px solid #d4d4d4;
-  border-radius: 4px;
+  line-height: 10px;
+  /* border: 1px solid #d4d4d4; */
+  /* border-radius: 4px; */
   overflow: hidden;
 }
 .previewContainer img {
   overflow: scroll;
+}
+.sun-editor-editable {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  padding: 14px;
+  flex: 1;
+  overflow-y: hidden;
+  overflow: auto;
+}
+.Preview_header {
+  font-family: "Poppins", sans-serif;
+  border: 1px solid #dadada;
+  border-bottom:0px;
+  border-radius: 5px 5px 0px 0px;
+  height:10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 3px;
+  padding:8px;
+  line-height: 1.5;
+  color:#0056b3;
+  background-color:#e6f7ff ;
+  font-size: 13px;
+  word-spacing: 1px;
+}
+.Preview_iframe {
+  height: 90%;
+}
+
+@media screen and (max-width: 1113px) {
+  .Preview_header {
+    height: 15%;
+  }
+  .Preview_iframe {
+    height: 85%;
+  }
+}
+@media screen and (max-width: 840px) {
+  .Preview_header {
+    height: 22%;
+  }
+  .Preview_iframe {
+    height: 78%;
+  }
+}
+@media screen and (max-width: 637px) {
+  .Preview_header {
+    height: 28%;
+  }
+  .Preview_iframe {
+    height: 72%;
+  }
+}
+
+@media screen and (max-width: 356px) {
+  .Preview_header {
+    height: 35%;
+  }
+  .Preview_iframe {
+    height: 65%;
+  }
+}
+@media screen and (max-width: 345px) {
+  .Preview_header {
+    height: 42%;
+  }
+  .Preview_iframe {
+    height: 58%;
+  }
 }
